name:                etcd
version:             0.1.0.0
license:             OtherLicense
license-file:        UNLICENSE
synopsis:            Client for etcd, a highly-available key value store
description:         See https://github.com/coreos/etcd
author:              Tomas Carnecky
maintainer:          tomas.carnecky@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:    src

  exposed-modules:   Data.Etcd

  build-depends:     MonadRandom   >= 0
  build-depends:     aeson         >= 0
  build-depends:     base          >= 4.0     && < 5
  build-depends:     bytestring    >= 0.10
  build-depends:     conduit       >= 0
  build-depends:     containers    >= 0
  build-depends:     directory     >= 0
  build-depends:     filepath      >= 0
  build-depends:     hashable      >= 0
  build-depends:     http-conduit  >= 0
  build-depends:     http-types    >= 0
  build-depends:     mtl           >= 0
  build-depends:     network       >= 0
  build-depends:     old-locale    >= 0
  build-depends:     process       >= 1.1.0
  build-depends:     random        >= 0
  build-depends:     stm           >= 2.0
  build-depends:     text          >= 0
  build-depends:     time          >= 0
  build-depends:     unix          >= 2.0

  default-language:  Haskell2010


executable etcd-client
  hs-source-dirs:    src

  main-is:           Main.hs

  build-depends:     MonadRandom   >= 0
  build-depends:     aeson         >= 0
  build-depends:     base          >= 4.0     && < 5
  build-depends:     bytestring    >= 0.10
  build-depends:     conduit       >= 0
  build-depends:     containers    >= 0
  build-depends:     directory     >= 0
  build-depends:     filepath      >= 0
  build-depends:     hashable      >= 0
  build-depends:     http-conduit  >= 0
  build-depends:     http-types    >= 0
  build-depends:     mtl           >= 0
  build-depends:     network       >= 0
  build-depends:     old-locale    >= 0
  build-depends:     process       >= 1.1.0
  build-depends:     random        >= 0
  build-depends:     stm           >= 2.0
  build-depends:     text          >= 0
  build-depends:     time          >= 0
  build-depends:     unix          >= 2.0

  default-language:  Haskell2010
