name:                etcd
version:             0.1.0.1
license:             OtherLicense
license-file:        UNLICENSE
synopsis:            Client for etcd, a highly-available key value store
description:         See https://github.com/coreos/etcd
author:              Tomas Carnecky
maintainer:          tomas.carnecky@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:    src

  exposed-modules:   Data.Etcd

  build-depends:     aeson         >= 0
  build-depends:     base          >= 4.0     && < 5
  build-depends:     bytestring    >= 0
  build-depends:     http-conduit  >= 0

  default-language:  Haskell2010
  ghc-options:       -Wall



test-suite test
  type:              exitcode-stdio-1.0

  hs-source-dirs:    test
  main-is:           Test.hs

  build-depends:     base
  build-depends:     etcd
  build-depends:     hspec
  build-depends:     mtl

  default-language:  Haskell2010
